--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
 </head>
 
-<body">
-
+<body>
 <header class="header">
   <h1>About me</h1>
-  
   <div class="discription">
     <img src="./foto/jaba.gif" class="foto">
     <p>
@@ -23,33 +21,60 @@
     </p>
   </div>
 </header>
+
 <div class="achievements">
-  <h2>Some facts about me</h2>
+    <div class="item item1">
+      <h2>Programming languages I know</h2>
+      <ul>  
+        <li>C;</li>
+        <li>C++;</li>
+        <li>Python;</li>
+        <li>Java.</li>
+      </ul>
+    </div>
+    <div class="item item2">
+      <h2>Courses I successfully passed</h2>
+      <ul>  
+        <li>Fundamentals of Computer Architecture;</li>
+        <li>Analytical Geometry and Linear Algebra;</li>
+        <li>Mathematical Analysis;</li>
+        <li>Logic and Discrete Mathematics;</li>
+        <li>Introduction To Programming;</li>
+        <li>English for academic purposes;</li>
+        <li>Software Systems Analysis and Design;</li>
+        <li>Data Structures and Algorithms;</li>
+        <li>Theoretical Computer Science.</li>
+      </ul>
+    </div>
+    <div class="item item3">
+      <h2>My areas of interest in IT</h2>
+      <ul>  
+        <li>Artificial intelligence;</li>
+        <li>Robotics;</li>
+        <li>Game development;</li>
+        <li>Olympiad programming.</li>
+      </ul>
+    </div>
+    <div class="item item4">
+      <h2>My hobbies</h2>
+      <ul>  
+        <li>Drawing;</li>
+        <li>Reading;</li>
+        <li>Playing video games;</li>
+        <li>Playing the kalimba.</li>
+      </ul>
+    </div>
+</div>
 
-  <ul>
-
-    <li>
-      <a href= "./first.html">Programming languages I know;</a>
-    </li>
-    <li>
-      <a href= "./second.html">Courses I successfully passed;</a>
-    </li>
-    <li>
-      <a href= "./third.html">My areas of interest in IT;</a>
-    </li>
-    <li>
-      <a href= "./fourth.html">My hobbies.</a>
-    </li>
-
-  </ul>
+<div class="ComicButton">
+  <section>
+    <h2><a href= "./comic.html">Comic</a></h2>
+  </section>
 </div>
 
 <footer>
   <div class="details">
-    <h2>My contacts</h2>
-  
     <ul class="links">
-  
       <li class="li">
         <a href= "https://vk.com/id519015179"><img src="./foto/icons8-vk.svg" alt=""></a>
       </li>
@@ -63,8 +88,6 @@
         <a href="mailto:m.chugaeva@innopolis.university"><img src="./foto/icons8-почта-48.png" alt=""></a>
       </li>
     </ul>
-
   </div>
 </footer> 
-
 </body>
