--- a/comic.html
+++ b/comic.html
@@ -14,10 +14,10 @@
     <h1>Comic</h1>
     <div class="learntlang">
         <h2 id="IDtitle"></h2>
-        <img id="IDimage" src="" alt="">
-        <p id="IDdata"></p>
+        <img id="IDimage" src="" alt="" class="comicpic"> 
+        <p id="IDdata" class="Idtext"></p>
         <a href= "./index.html">Go back to main page.</a>
     </div>
-    <script src="fethcher.js"></script>
+    <script src="dist/fetch.bundle.js"></script>
 </body>
 </html>
