--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <a href="https://t.me/mariiachugaeva"><img src="./foto/icons8-логотип-telegram.svg" alt=""></a>
       </li>
       <li class="li">
-        <a href="mailto:m.chugaeva@innopolis.university"><img src="./foto/icons8-почта-48.png" alt=""></a>
+        <a href="mailto:m.chugaeva@innopolis.university"><img src="./foto/icons8-почта.svg" alt=""></a>
       </li>
     </ul>
   </div>
